--- a/.github/workflows/ci-continuous-integration.yml
+++ b/.github/workflows/ci-continuous-integration.yml
@@ -31,150 +31,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-2:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v4
         with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-3:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-4:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-5:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-6:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-7:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-8:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-9:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Package installation
-        run: npm ci
-      - name: Run unit tests
-        run: |
-          ci-scripts/unit-tests.sh          
-  unit_tests-10:
-    name: CI - Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+          path: | 
+            node_modules
+            projects/storefrontapp-e2e-cypress/node_modules
+            ~/.cache/Cypress
+          key: nodemodules-${{ github.event.pull_request.base.sha }}
+          restore-keys: nodemodules-${{ github.event.pull_request.base.sha }}
       - name: Package installation
         run: npm ci
       - name: Run unit tests
