--- a/core-libs/setup/package.json
+++ b/core-libs/setup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/setup",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Includes features that makes Spartacus and it's setup easier and streamlined.",
   "keywords": [
     "spartacus",
