--- a/feature-libs/storefinder/package.json
+++ b/feature-libs/storefinder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/storefinder",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Store finder feature library for Spartacus",
   "keywords": [
     "spartacus",
