--- a/feature-libs/asm/package.json
+++ b/feature-libs/asm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/asm",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "ASM feature library for Spartacus",
   "keywords": [
     "spartacus",
