--- a/feature-libs/customer-ticketing/package.json
+++ b/feature-libs/customer-ticketing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/customer-ticketing",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Customer-Ticketing library for Spartacus",
   "keywords": [
     "spartacus",
