--- a/feature-libs/order/package.json
+++ b/feature-libs/order/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/order",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Order feature library for Spartacus",
   "keywords": [
     "spartacus",
