--- a/feature-libs/organization/package.json
+++ b/feature-libs/organization/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/organization",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Organization library for Spartacus",
   "keywords": [
     "spartacus",
