--- a/feature-libs/pdf-invoices/package.json
+++ b/feature-libs/pdf-invoices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/pdf-invoices",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Invoices library for Spartacus",
   "keywords": [
     "spartacus",
