--- a/feature-libs/pickup-in-store/package.json
+++ b/feature-libs/pickup-in-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/pickup-in-store",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "",
   "keywords": [
     "spartacus",
