--- a/feature-libs/product-configurator/package.json
+++ b/feature-libs/product-configurator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/product-configurator",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Product configurator feature library for Spartacus",
   "keywords": [
     "spartacus",
