--- a/feature-libs/product-multi-dimensional/package.json
+++ b/feature-libs/product-multi-dimensional/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/product-multi-dimensional",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Product Multi-Dimensional library for Spartacus",
   "keywords": [
     "spartacus",
