--- a/feature-libs/qualtrics/package.json
+++ b/feature-libs/qualtrics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/qualtrics",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Qualtrics library for Spartacus",
   "keywords": [
     "spartacus",
