--- a/feature-libs/requested-delivery-date/package.json
+++ b/feature-libs/requested-delivery-date/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/requested-delivery-date",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Requested Delivery Date library for Spartacus",
   "keywords": [
     "spartacus",
