--- a/feature-libs/smartedit/package.json
+++ b/feature-libs/smartedit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/smartedit",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Smart Edit feature library for Spartacus",
   "keywords": [
     "spartacus",
