--- a/feature-libs/tracking/package.json
+++ b/feature-libs/tracking/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/tracking",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Spartacus tracking and personalization library",
   "keywords": [
     "spartacus",
