--- a/feature-libs/user/package.json
+++ b/feature-libs/user/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/user",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "User feature library for Spartacus",
   "keywords": [
     "spartacus",
