--- a/integration-libs/cdc/package.json
+++ b/integration-libs/cdc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/cdc",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Customer Data Cloud Integration library for Spartacus",
   "keywords": [
     "spartacus",
