--- a/integration-libs/cds/package.json
+++ b/integration-libs/cds/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/cds",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Context Driven Service library for Spartacus",
   "keywords": [
     "spartacus",
