--- a/integration-libs/cpq-quote/package.json
+++ b/integration-libs/cpq-quote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/cpq-quote",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "cpq-quote library for Spartacus",
   "keywords": [
     "spartacus",
