--- a/integration-libs/digital-payments/package.json
+++ b/integration-libs/digital-payments/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/digital-payments",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "Digital Payments Integration library for Spartacus",
   "keywords": [
     "spartacus",
