--- a/integration-libs/omf/package.json
+++ b/integration-libs/omf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/omf",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "SAP Order Management Foundation Integration",
   "keywords": [
     "spartacus",
