--- a/integration-libs/opf/package.json
+++ b/integration-libs/opf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/opf",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "SAP Open Payment Framework integration library for Spartacus",
   "keywords": [
     "spartacus",
