--- a/integration-libs/opps/package.json
+++ b/integration-libs/opps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/opps",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "OPPS (Omni-Channel Personalization and Promotions Services) library for Spartacus",
   "keywords": [
     "spartacus",
