--- a/integration-libs/s4-service/package.json
+++ b/integration-libs/s4-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/s4-service",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "S/4HANA Service Integration Integration library for Spartacus",
   "keywords": [
     "spartacus",
