--- a/integration-libs/s4om/package.json
+++ b/integration-libs/s4om/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/s4om",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "S/4HANA Order Management (b2b feature)",
   "keywords": [
     "spartacus",
