--- a/integration-libs/segment-refs/package.json
+++ b/integration-libs/segment-refs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/segment-refs",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "description": "segment-refs",
   "keywords": [
     "spartacus",
