--- a/projects/storefrontlib/package.json
+++ b/projects/storefrontlib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spartacus/storefront",
-  "version": "2211.32.0-1",
+  "version": "2211.32.0",
   "keywords": [
     "spartacus",
     "storefront",
