--- a/projects/assets/tsconfig.lib.json
+++ b/projects/assets/tsconfig.lib.json
@@ -14,7 +14,7 @@
     "types": [],
     "lib": ["esnext", "dom"],
     "paths": {
-      "@spartacus/core": ["dist/core"]
+      "@spartacus/core": ["projects/core/public_api"]
     }
   },
   "exclude": ["src/test.ts", "**/*.spec.ts"]
