--- a/projects/assets/tsconfig.lib.prod.json
+++ b/projects/assets/tsconfig.lib.prod.json
@@ -1,10 +1,7 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false,
-    "paths": {
-      "@spartacus/core": ["dist/core"]
-    }
+    "declarationMap": false
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
