--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -3,7 +3,7 @@
     "CX_BASE_URL": "https://40.76.109.9:9002"
   },
   "local": {
-    "CX_BASE_URL": "https://localhost:9002"
+    "CX_BASE_URL": "https://api.cg79x9wuu9-eccommerc1-d3-public.model-t.myhybris.cloud"
   },
   "local-http": {
     "CX_BASE_URL": "http://localhost:9002"
